# Brute-Force-Game-Engine

./: CMakeLists.txt  COMPILE  DEPENDENCIES
code/demos/Chat/: CMakeLists.txt  Main.cpp
code/demos/Pong/: BallControl.h  BarControl.h  CMakeLists.txt  Main.cpp  PongDefinitions.h  PongState.h  Score.cpp  Score.h  ViewPongState.h
code/demos/SpaceInvaders/: AudioState.cpp  AudioState.h  CMakeLists.txt  Cannon.cpp  Cannon.h  Collectable.cpp  Collectable.h  Globals.cpp  Globals.h  HumanGeneral.cpp  HumanGeneral.h  InvaderControl.cpp  InvaderGeneral.cpp  InvaderGeneral.h  Main.cpp  MainState.cpp  MainState.h  PowerUpEffect.h  ShipControl.cpp  ShipControl.h  ViewState.cpp  ViewState.h
code/engine/: CMakeLists.txt  EngineInit.h
code/engine/Audio/: Audio.h  AudioEvent_fwd.h  AudioModule.h  AudioObject.h  CMakeLists.txt  FileBase.h  FileFactory.cpp  FileFactory.h  Listener.h  Main.cpp  Main.h  OggFile.cpp  OggFileReader.h  OpenALAudioObject.cpp  OpenALAudioObject.h  OpenALListener.cpp  OpenALSoundDevice.cpp  OpenALSoundDevice.h  OpenALStream.cpp  OpenALStream.h  Playlist.cpp  Playlist.h  SoundDevice.h  SoundEmitter.cpp  SoundEmitter.h  Stream.h  StreamLoop.h  WaveFile.h  WaveFileReader.cpp
code/engine/Audio/FileReader/: FileFactory.cpp  FileFactory.h  OggFileReader.cpp  OggFileReader.h  WaveFileReader.cpp  WaveFileReader.h
code/engine/Audio/Modules/: Playlist.cpp  Playlist.h  SoundEmitter.cpp  SoundEmitter.h
code/engine/Audio/OpenAL/: OpenALAudioObject.cpp  OpenALAudioObject.h  OpenALListener.cpp  OpenALListener.h  OpenALSoundDevice.cpp  OpenALSoundDevice.h  OpenALStream.cpp  OpenALStream.h
code/engine/Base/: CMakeLists.txt  Cpp.h  Demangle.cpp  Demangle.h  Deprecated.h  DummyMutex.h  EntryPoint.h  LibraryMainBase.h  Logger.cpp  Logger.h  NameCurrentThread.cpp  NameCurrentThread.h  PeriodicWaitForEqual.h  ShowException.cpp  ShowException.h  Singleton.h  TestAppDeco.h
code/engine/Controller/: Action.cpp  Action.h  ActionBuilder.h  CMakeLists.txt  Controller.h  ControllerEvents.h  ControllerEvents_fwd.h  ControllerImpl.cpp  ControllerImpl.h  Delegater.h  EventDumper.cpp  Main.cpp  Main.h  OISDevice.h  OISUtils.cpp  State.cpp  State.h  StateInsertion.h  VIPBase.cpp  VIPBase.h  VIPComponents.h  VIPEnvironment.h  VIPXmlInitializer.cpp  VIPXmlInitializer.h
code/engine/Core/: CMakeLists.txt  CharArray.h  ClockUtils.cpp  ClockUtils.h  Console.cpp  Console.h  EngineInit.h  Enums.xml  ExternalTypes_fwd.h  GameHandle.cpp  GameHandle.h  Math.cpp  Math.h  Mesh.h  Path.cpp  PugiXmlFileHandle.cpp  PugiXmlFileHandle.h  PugiXmlTree.h  String.cpp  String.h  Types.h  Units.h  XmlFileHandle.h  qv4.h  v3.h
code/engine/EnumGen/: CMakeLists.txt  Generator.h  Parser.h
code/engine/Event/: Binder.h  Binding.h  CMakeLists.txt  Callable.h  Catcher.h  Connectable.h  Connection.h  EntryPoint.h  Envelope.h  Event.h  IncompatibleTypeException.h  Lane.h  MemberArity.h  SubLane.h  Synchronizer.h  Synchronizer.hpp  TickData.h  Void.h
code/engine/EventSystem/: CMakeLists.txt  Emitter.h  Event.h  Get.h
code/engine/EventSystem/Core/: EventDefs.h  EventFunctor.h  EventFunctorTable.h  EventHeader.h  EventInterface.h  EventLoop.cpp  EventLoop.h  EventManager.cpp  EventPool.h  EventProcessor.cpp  ExceptionPolicy.h
code/engine/Model/: CMakeLists.txt  Console.cpp  Console.h  Enums.xml  Environment.h  GameObject.cpp  GameObject.h  LevelOfDetail.h  LevelOfDetailDefault.cpp  LevelOfDetailDefault.h  Managed.cpp  Managed.h  Module.h  Sector.cpp  Sector.h  State.cpp  State.h  Trigger.h
code/engine/Network/: CMakeLists.txt  Checksum.cpp  Checksum.h  Client.cpp  Client.h  Defs.h  Enums.xml  Event.cpp  Event.h  Event_fwd.h  Exception.h  Handshake.h  Interface.h  Main.cpp  Main.h  Network.h  NetworkModule.cpp  NetworkModule.h  Packet.h  PeerIdentificator.cpp  PeerIdentificator.h  PrintErrorCode.h  Segment.h  Server.cpp  Server.h  Tcp.h  TcpModule.cpp  TcpModule.h  Udp.h  UdpModule.cpp  UdpModule.h  UdpReadModule.cpp  UdpReadModule.h  UdpWriteModule.cpp  UdpWriteModule.h
code/engine/Physics/: CMakeLists.txt  Enums.xml  Event_fwd.h  Interpolator.h  Main.cpp  Main.h  OdeDefs.h  Physics.h  PhysicsManager.cpp  PhysicsManager.h  PhysicsObject.cpp  PhysicsObject.h  Physics_fwd.h
code/engine/View/: CMakeLists.txt  Camera.cpp  Camera.h  CameraCreation.h  Console.cpp  Console.h  ControllerMyGuiAdapter.cpp  ControllerMyGuiAdapter.h  Defs.h  EffectCreation.h  Enums.xml  Event_fwd.h  Explosion.cpp  Explosion.h  Fps.cpp  Fps.h  HudElement.cpp  HudElement.h  Light.cpp  Light.h  LoadMesh.cpp  LoadMesh.h  Main.cpp  Main.h  MassTest.cpp  MassTest.h  MenuEventData.cpp  MenuEventData.h  MiniMain.cpp  MiniMain.h  MyGuiBinding.h  ObjectCreation.cpp  ObjectCreation.h  OgreInit.cpp  OgreInit.h  Owner.cpp  Owner.h  RenderObject.cpp  RenderObject.h  ScrollBound.h  (+6 more)
code/tests/: CMakeLists.txt
code/tests/AudioTest/: CMakeLists.txt  (+7 more)
code/tests/ControllerTest/: CMakeLists.txt  InputWindowWin32.cpp  main.cpp
code/tests/ControllerTest2/: CMakeLists.txt  Controller.cpp
code/tests/PhysicsTest/: CMakeLists.txt  PhysicsTest.cpp
code/tests/SynchronizationTest/: CMakeLists.txt  Main.cpp
code/tests/ViewTest/: CMakeLists.txt  ViewTest.cpp
code/tools/Composer/: AdapterControl.cpp  AdapterControl.h  AnimationControl.cpp  AnimationControl.h  BaseFeature.h  CMakeLists.txt  CameraControl.cpp  CameraControl.h  ComposerState.cpp  ComposerState.h  ComposerViewState.cpp  ComposerViewState.h  Event_fwd.h  LightControl.cpp  LightControl.h  Main.cpp  MaterialChange.h  MeshControl.cpp  MeshControl.h  ModuleControl.cpp  ModuleControl.h  SharedData.h  SkyBoxSelect.cpp  SkyBoxSelect.h  SubEntitySelect.cpp  SubEntitySelect.h  TextureControl.cpp  TextureControl.h  TextureUnit.h
code/tools/Leveler/: BaseFeature.h  CMakeLists.txt  CameraControl.cpp  CameraControl.h  Event_fwd.h  MeshControl.cpp  MeshControl.h  SharedData.h  main.cpp
doc/: Doxyfile  NetworkConnection.h  PositionUpdate.h
scripts/control/: Console.xml  SpaceInvaders.xml
scripts/settings/: LevelOfDetail.xml
share/scripts/: build_boost.bat  make_bundle_dep.sh  make_engine_deb.sh
(+122 files in other folders)
