cmake_minimum_required(VERSION 2.6)

BFG_INIT_PACKAGE(Event)

FILE(GLOB Event_SOURCES *.cpp)
FILE(GLOB Event_HEADERS *.h *.hpp)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)

ADD_LIBRARY(bfgEvent STATIC
	${Event_SOURCES}
	${Event_HEADERS}
)

SET_TARGET_PROPERTIES(bfgEvent PROPERTIES OUTPUT_NAME_DEBUG "bfgEvent_d")

TARGET_LINK_LIBRARIES(bfgEvent
	${Boost_LIBRARIES}
	bfgCore
)

ADD_DEPENDENCIES(bfgEvent bfgCore)

INSTALL(TARGETS bfgEvent
	RUNTIME DESTINATION ${BFG_BIN_DIR}
	LIBRARY DESTINATION ${BFG_LIB_DIR}
	COMPONENT runtime
	ARCHIVE DESTINATION ${BFG_LIB_DIR}
	COMPONENT devel
)

IF(RELEASE)
	INSTALL(FILES ${Event_HEADERS}
		DESTINATION ${BFG_PACKAGE_INCLUDE_DIR}
		COMPONENT devel
	)
ENDIF()
