BFG_INIT_PACKAGE(Event)

FILE(GLOB Event_HEADERS *.h *.hpp)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)

ADD_LIBRARY(bfgEvent STATIC ${Event_HEADERS})
SET_TARGET_PROPERTIES(bfgEvent PROPERTIES LINKER_LANGUAGE CXX)

IF(RELEASE)
	INSTALL(FILES ${Event_HEADERS}
		DESTINATION ${BFG_PACKAGE_INCLUDE_DIR}
		COMPONENT devel
	)
ENDIF()
