BFG_INIT_PACKAGE(ControllerTest)

FILE(GLOB SOURCES
	*.cpp
)

FILE(GLOB OTHER
	*.rc
)

INCLUDE_DIRECTORIES(${X11_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(SYSTEM ${OIS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})

ADD_EXECUTABLE(bfgControllerTest ${SOURCES} ${OTHER})

SET_TARGET_PROPERTIES(bfgControllerTest PROPERTIES OUTPUT_NAME_DEBUG "bfgControllerTest_d")

TARGET_LINK_LIBRARIES(bfgControllerTest
	${Boost_LIBRARIES}
	${BoostLog_LIBRARIES}
	${X11_LIBRARIES}
	bfgBase
	bfgController
	bfgCore
#	bfgNetwork
)

INSTALL(TARGETS bfgControllerTest
	RUNTIME DESTINATION ${BFG_BIN_DIR}
	COMPONENT devel
)
