BFG_INIT_PACKAGE(ControllerTest2)

FILE(GLOB SOURCES
	*.cpp
)

FILE(GLOB HEADERS
	*.h
)

INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(SYSTEM ${OIS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)	# For subdirectories
INCLUDE_DIRECTORIES(.)	# For subdirectories

ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK)

ADD_EXECUTABLE(bfgControllerTest2 ${SOURCES} ${HEADERS})

ADD_TEST(NAME ControllerTest2
	WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/bin/Testing"
	COMMAND bfgControllerTest2
)

SET_TARGET_PROPERTIES(bfgControllerTest2 PROPERTIES OUTPUT_NAME_DEBUG "bfgControllerTest2_d")

TARGET_LINK_LIBRARIES(bfgControllerTest2
	${Boost_LIBRARIES}
	${BoostLog_LIBRARIES}
	${OGRE_LIBRARIES}
	bfgController
)

ADD_DEPENDENCIES(bfgControllerTest2 ViewEnums)

INSTALL(TARGETS bfgControllerTest2
	RUNTIME DESTINATION ${BFG_BIN_DIR}
	COMPONENT devel
)
