CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

BFG_INIT_PACKAGE(PhysicsTest)

FILE(GLOB SOURCES
	*.cpp
)

FILE(GLOB HEADERS
	*.h
)

INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)	# For subdirectories
INCLUDE_DIRECTORIES(.)	# For subdirectories

ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK)

ADD_EXECUTABLE(bfgPhysicsTest ${SOURCES} ${HEADERS})

ADD_TEST(NAME PhysicsTest COMMAND bfgPhysicsTest)

SET_TARGET_PROPERTIES(bfgPhysicsTest PROPERTIES OUTPUT_NAME_DEBUG "bfgPhysicsTest_d")

TARGET_LINK_LIBRARIES(bfgPhysicsTest
	${Boost_LIBRARIES}
	${BoostLog_LIBRARIES}
	bfgCore
	bfgPhysics
	bfgView
)

INSTALL(TARGETS bfgPhysicsTest
	RUNTIME DESTINATION ${BFG_BIN_DIR}
	COMPONENT devel
)
