cmake_minimum_required(VERSION 2.6)

BFG_INIT_PACKAGE(SynchronizationTest)

FILE(GLOB SOURCES
	*.cpp
)

FILE(GLOB HEADERS
	*.h
)

INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(SYSTEM ${OIS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(SYSTEM ${OGRE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(SYSTEM ${MYGUI_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)
INCLUDE_DIRECTORIES(.)	# For subdirectories

ADD_DEFINITIONS(-DTIXML_USE_STL)

ADD_EXECUTABLE(bfgSynchronizationTest ${SOURCES} ${HEADERS})

SET_TARGET_PROPERTIES(bfgSynchronizationTest PROPERTIES OUTPUT_NAME_DEBUG "bfgSynchronizationTest_d")

TARGET_LINK_LIBRARIES(bfgSynchronizationTest
	${BoostLog_LIBRARIES}
	${Boost_LIBRARIES}
	${MYGUI_LIBRARIES}
	${MYGUI_OGRE_LIBRARIES}
	${ODE_LIBRARY}
	${OGRE_LIBRARIES}
	${OIS_LIBRARIES}
	bfgBase
	bfgController
	bfgCore
	bfgModel
	bfgNetwork
	bfgPhysics
	bfgView
)

INSTALL(TARGETS bfgSynchronizationTest
        RUNTIME DESTINATION ${BFG_BIN_DIR}
        COMPONENT runtime)
