CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

BFG_INIT_PACKAGE(ViewTest)

FILE(GLOB SOURCES
	*.cpp
)

FILE(GLOB HEADERS
	*.h
)

INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(SYSTEM ${OGRE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)	# For subdirectories
INCLUDE_DIRECTORIES(.)	# For subdirectories

ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK)

ADD_EXECUTABLE(bfgViewTest ${SOURCES} ${HEADERS})

ADD_TEST(NAME ViewTest
	WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/bin/Testing"
	COMMAND bfgViewTest
)

SET_TARGET_PROPERTIES(bfgViewTest PROPERTIES OUTPUT_NAME_DEBUG "bfgViewTest_d")

TARGET_LINK_LIBRARIES(bfgViewTest
	${Boost_LIBRARIES}
	${BoostLog_LIBRARIES}
	bfgCore
	bfgView
)

INSTALL(TARGETS bfgViewTest
	RUNTIME DESTINATION ${BFG_BIN_DIR}
	COMPONENT devel
)
