BFG_INIT_PACKAGE(Composer)

FILE(GLOB COMPOSER_SOURCES
	*.cpp
)

FILE(GLOB COMPOSER_HEADERS
	*.h
)

INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(SYSTEM ${OGRE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(SYSTEM ${OIS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(SYSTEM ${MYGUI_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)	# For subdirectories
INCLUDE_DIRECTORIES(.)	# For subdirectories

ADD_EXECUTABLE(bfgComposer ${COMPOSER_SOURCES} ${COMPOSER_HEADERS})

SET_TARGET_PROPERTIES(bfgComposer PROPERTIES OUTPUT_NAME_DEBUG "bfgComposer_d")

TARGET_LINK_LIBRARIES(bfgComposer
	bfgBase
	bfgController
	bfgCore
	bfgModel
	bfgView
	${BoostLog_LIBRARIES}
	${Boost_LIBRARIES}
	${OGRE_LIBRARIES}
	${MYGUI_LIBRARIES}
	${MYGUI_OGRE_LIBRARIES}
)

INSTALL(TARGETS bfgComposer
        RUNTIME DESTINATION ${BFG_BIN_DIR}
        COMPONENT runtime)
