BFG_INIT_PACKAGE(Leveler)

FILE(GLOB LEVELER_SOURCES 
	*.cpp
)

FILE(GLOB LEVELER_HEADERS 
	*.h
)

INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(SYSTEM ${OGRE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(SYSTEM ${OIS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(SYSTEM ${MYGUI_INCLUDE_DIR})
INCLUDE_DIRECTORIES(SYSTEM ${MYGUI_OGRE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)	# For subdirectories
INCLUDE_DIRECTORIES(.)	# For subdirectories

ADD_EXECUTABLE(bfgLeveler ${LEVELER_SOURCES} ${LEVELER_HEADERS})

SET_TARGET_PROPERTIES(bfgLeveler PROPERTIES OUTPUT_NAME_DEBUG "bfgLeveler_d")

TARGET_LINK_LIBRARIES(bfgLeveler
	bfgBase
	bfgController
	bfgCore
	bfgModel
	bfgView
	${BoostLog_LIBRARIES}
	${Boost_LIBRARIES}
	${OGRE_LIBRARIES}
	${MYGUI_LIBRARIES}
	${MYGUI_OGRE_LIBRARIES}
)

INSTALL(TARGETS bfgLeveler
	RUNTIME DESTINATION ${BFG_BIN_DIR}
	COMPONENT runtime)
